--- a/Css/style.css
+++ b/Css/style.css
@@ -1,8 +1,9 @@
-*{
+* {
     margin: 0;
     padding: 0;
-  
+
 }
+
 #nav-p {
     color: black;
     transition: 1ms;
@@ -12,6 +13,86 @@
     text-decoration: underline;
 }
 
-#img-inicio{
-    margin-left: 28%;
+#img-inicio {
+    margin-left: 29%;
+}
+
+#conteudo {
+    color: white;
+}
+
+#index-inicio {
+    margin: 26vh auto 0;
+}
+
+
+.flip-card {
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
+    width: 100%;
+    height: 400px;
+    box-shadow: inset 0 0 12px rgba(143, 143, 143, 0.473);
+}
+
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    color: white;
+}
+
+#img-card-1 {
+    
+    background-position: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    background-image: url(../Img/Drive-card.png);
+    background-repeat: no-repeat;
+}
+#img-card-2 {
+    background-position: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    background-image: url(../Img/Docs-card.png);
+    background-repeat: no-repeat;
+}
+#img-card-3 {
+    background-position: center;
+    font-size: 1.5rem;
+    font-weight: bold;
+    background-image: url(../Img/sheets.png);
+    background-repeat: no-repeat;
+}
+
+.card-title{
+    color: black;
+}
+
+.flip-card-back {
+    background-color: #ffffff;
+    /* escuro elegante */
+    transform: rotateY(180deg);
+    font-size: 1rem;
+    color: black;
+    box-shadow: inset 0 0 12px rgba(143, 143, 143, 0.473);
 }
